"""Create the mailboxes table

Revision ID: e0a4da5dbe40
Revises: 4e660ee1e962
Create Date: 2020-01-21 16:15:00.257930

"""
from alembic import op
import sqlalchemy as sa


# revision identifiers, used by Alembic.
revision = "e0a4da5dbe40"
down_revision = "4e660ee1e962"
branch_labels = None
depends_on = None


def upgrade():
    # ### commands auto generated by Alembic - please adjust! ###
    op.create_table(
        "mailboxes",
        sa.Column("id", sa.Integer(), nullable=False),
        sa.Column(
            "is_active", sa.Boolean(), server_default=sa.true(), nullable=False,
        ),
        sa.Column("created_at", sa.DateTime(), nullable=True),
        sa.Column("updated_at", sa.DateTime(), nullable=True),
        sa.Column("domain_id", sa.Integer(), nullable=False),
        sa.Column("name", sa.String(length=150), nullable=False),
        sa.Column("password", sa.String(length=150), nullable=False),
        sa.ForeignKeyConstraint(
            ("domain_id",),
            ["domains.id"],
            onupdate="CASCADE",
            ondelete="CASCADE",
        ),
        sa.PrimaryKeyConstraint("id"),
        sa.UniqueConstraint(
            "domain_id", "name", name=op.f("ix_mailboxes_email")
        ),
    )
    op.create_index(
        op.f("ix_mailboxes_domain_id"), "mailboxes", ["domain_id"], unique=False
    )
    # ### end Alembic commands ###


def downgrade():
    # ### commands auto generated by Alembic - please adjust! ###
    op.drop_index(op.f("ix_mailboxes_domain_id"), table_name="mailboxes")
    op.drop_table("mailboxes")
    # ### end Alembic commands ###
