"""Create the aliases table

Revision ID: eac808f72d61
Revises: e0a4da5dbe40
Create Date: 2020-01-21 16:38:22.922772

"""
from alembic import op
import sqlalchemy as sa


# revision identifiers, used by Alembic.
revision = "eac808f72d61"
down_revision = "e0a4da5dbe40"
branch_labels = None
depends_on = None


def upgrade():
    # ### commands auto generated by Alembic - please adjust! ###
    op.create_table(
        "aliases",
        sa.Column("id", sa.Integer(), nullable=False),
        sa.Column(
            "is_active", sa.Boolean(), server_default=sa.true(), nullable=False,
        ),
        sa.Column("created_at", sa.DateTime(), nullable=True),
        sa.Column("updated_at", sa.DateTime(), nullable=True),
        sa.Column("domain_id", sa.Integer(), nullable=False),
        sa.Column("source", sa.String(length=150), nullable=False),
        sa.Column("destination", sa.String(length=150), nullable=False),
        sa.ForeignKeyConstraint(
            ("domain_id",),
            ["domains.id"],
            onupdate="CASCADE",
            ondelete="CASCADE",
        ),
        sa.PrimaryKeyConstraint("id"),
    )
    op.create_index(
        op.f("ix_aliases_domain_id"), "aliases", ["domain_id"], unique=False
    )
    op.create_index(
        op.f("ix_aliases_source"), "aliases", ["source"], unique=False
    )
    # ### end Alembic commands ###


def downgrade():
    # ### commands auto generated by Alembic - please adjust! ###
    op.drop_index(op.f("ix_aliases_source"), table_name="aliases")
    op.drop_index(op.f("ix_aliases_domain_id"), table_name="aliases")
    op.drop_table("aliases")
    # ### end Alembic commands ###
